--- a/exemplo4/index.html
+++ b/exemplo4/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8">
-    <title>Diferentes estilos e deferentes browsers</title>
+    <title>Diferentes estilos em deferentes browsers</title>
     <!--
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
